import fs from "fs-extra";
import path from "path";
import { it, expect, afterAll, describe } from "vitest";
import SqliteDatabase from "better-sqlite3";
import { runAdapterTests } from "@stash-it/dev-tools";
import { createHmac } from "node:crypto";

import { SqliteAdapter, type SqliteAdapterConfiguration } from "./index";

const generateRandomString = () => createHmac("sha256", "stash-it").digest("hex");

const tempDir = path.join(__dirname, "..", "temp");
const tableName = "items";
const keyColumnName = "key";
const valueColumnName = "value";
const extraColumnName = "extra";

const dbName = `testdb_${generateRandomString()}.db`;
const dbPath = path.join(tempDir, dbName);

const adapterConfiguration: SqliteAdapterConfiguration = {
  connection: {
    dbPath,
  },
  table: {
    tableName,
    keyColumnName,
    valueColumnName,
    extraColumnName,
  },
};

const prepareDb = () => {
  fs.removeSync(tempDir);
  fs.ensureDirSync(tempDir);

  const db = new SqliteDatabase(dbPath);

  db.prepare(
    `CREATE TABLE "${tableName}" ("${keyColumnName}" TEXT PRIMARY KEY, "${valueColumnName}" TEXT, "${extraColumnName}" TEXT)`,
  ).run();
};

prepareDb();

describe("sqlite-adapter", () => {
  afterAll(() => {
    fs.removeSync(tempDir);
  });

  describe("configuration", () => {
    describe("validation", () => {
      it("should throw when db file does not exist", () => {
        expect(() => new SqliteAdapter({ connection: { dbPath: "./non-existent.db" } })).to.throw(
          "unable to open database file",
        );
      });

      describe("optional configuration", () => {
        describe("tableName", () => {
          it("should throw if passed value is not a string", () => {
            expect(
              () => new SqliteAdapter({ ...adapterConfiguration, table: { tableName: 1 as unknown as string } }),
            ).toThrowErrorMatchingSnapshot();
          });
        });

        describe("keyColumnName", () => {
          it("should throw if passed value is not a string", () => {
            // @ts-ignore
            expect(
              () => new SqliteAdapter({ ...adapterConfiguration, table: { keyColumnName: 1 as unknown as string } }),
            ).toThrowErrorMatchingSnapshot();
          });
        });

        describe("valueColumnName", () => {
          it("should throw if passed value is not a string", () => {
            // @ts-ignore
            expect(
              () => new SqliteAdapter({ ...adapterConfiguration, table: { valueColumnName: 1 as unknown as string } }),
            ).toThrowErrorMatchingSnapshot();
          });
        });

        describe("extraColumnName", () => {
          it("should throw if passed value is not a string", () => {
            // @ts-ignore
            expect(
              () => new SqliteAdapter({ ...adapterConfiguration, table: { extraColumnName: 1 as unknown as string } }),
            ).toThrowErrorMatchingSnapshot();
          });
        });
      });
    });

    describe("table check", () => {
      it("should throw when table does not exist", async () => {
        const configuration: SqliteAdapterConfiguration = {
          ...adapterConfiguration,
          table: { ...adapterConfiguration.table, tableName: "non_existent_table" },
        };

        const adapter = new SqliteAdapter(configuration);

        await expect(adapter.checkStorage()).rejects.toThrow("no such table: non_existent_table");
      });

      it("should throw when key column doesn't exist", async () => {
        const configuration: SqliteAdapterConfiguration = {
          ...adapterConfiguration,
          table: { ...adapterConfiguration.table, keyColumnName: "non_existent_key_column" },
        };

        const adapter = new SqliteAdapter(configuration);

        await expect(adapter.checkStorage()).rejects.toThrow('no such column: "non_existent_key_column"');
      });

      it("should throw when value column doesn't exist", async () => {
        const configuration: SqliteAdapterConfiguration = {
          ...adapterConfiguration,
          table: { ...adapterConfiguration.table, valueColumnName: "non_existent_value_column" },
        };

        const adapter = new SqliteAdapter(configuration);

        await expect(adapter.checkStorage()).rejects.toThrow('no such column: "non_existent_value_column"');
      });

      it("should throw when extra column doesn't exist", async () => {
        const configuration: SqliteAdapterConfiguration = {
          ...adapterConfiguration,
          table: { ...adapterConfiguration.table, extraColumnName: "non_existent_extra_column" },
        };

        const adapter = new SqliteAdapter(configuration);

        await expect(adapter.checkStorage()).rejects.toThrow('no such column: "non_existent_extra_column"');
      });
    });
  });

  describe("adapter tests", () => {
    const adapter = new SqliteAdapter(adapterConfiguration);

    runAdapterTests(adapter);
  });
});
