// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sqlite-adapter > configuration > validation > optional configuration > extraColumnName > should throw if passed value is not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "extraColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`sqlite-adapter > configuration > validation > optional configuration > keyColumnName > should throw if passed value is not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "keyColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`sqlite-adapter > configuration > validation > optional configuration > tableName > should throw if passed value is not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "tableName"
    ],
    "message": "Expected string, received number"
  }
]]
`;

exports[`sqlite-adapter > configuration > validation > optional configuration > valueColumnName > should throw if passed value is not a string 1`] = `
[ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "number",
    "path": [
      "table",
      "valueColumnName"
    ],
    "message": "Expected string, received number"
  }
]]
`;
